fix: исправление недочетов2

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <div class="profile__info">
                     <div class="profile__edit-name">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button type="button" class="profile__edit-button" alt="Кнопка"></button>
+                        <button type="button" class="profile__edit-button"></button>
                     </div>
                     <p class="profile__status">Исследователь океана</p>
                 </div>
             </div>
-            <button class="profile__add-button"><div class="profile__plus"></div></button>
+            <button class="profile__add-button"></button>
         </section>
         <section class="elements">
             <div class="elements__element">
@@ -82,11 +82,11 @@
         <div class="popup__container">
             <h2 class="popup__text">Редактировать профиль</h2>
             <form class="popup__form" name="popup">
-                <input type="text" class="popup__input popup__input_name" name="popup__input_name" value="Жак-Ив Кусто" maxlength="14" />
-                <input type="text" class="popup__input popup__input_status" name="popup__input_status" value="Исследователь океана" maxlength="40" />
-                <button type="submit" class="popup__button" name="popup__input_button" ><p>Сохранить</p></button>
+                <input type="text" class="popup__input popup__input_enter_name" name="popup__input-name" value="" maxlength="14" />
+                <input type="text" class="popup__input popup__input_enter_status" name="popup__input-status" value="" maxlength="40" />
+                <button type="submit" class="popup__button" name="popup__input-button">Сохранить</button>
             </form>
-            <img src="./images/cross.svg" class="popup__cross" alt="Крест">
+            <button class="popup__cross"></button>
         </div>
     </section>
 
