fix: изменение недочетов3

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <p class="profile__status">Исследователь океана</p>
                 </div>
             </div>
-            <button class="profile__add-button"></button>
+            <button type="button" class="profile__add-button"></button>
         </section>
         <section class="elements">
             <div class="elements__element">
@@ -86,7 +86,7 @@
                 <input type="text" class="popup__input popup__input_enter_status" name="popup__input-status" value="" maxlength="40" />
                 <button type="submit" class="popup__button" name="popup__input-button">Сохранить</button>
             </form>
-            <button class="popup__cross"></button>
+            <button type="button" class="popup__cross"></button>
         </div>
     </section>
 
