fix: исправление недочетов

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section class="popup popup_action_depict">
         <div class="popup__filling">
             <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Изображение" class="popup__illustration">
-            <p class="popup__hint">Текст</p>
+            <h2 class="popup__hint">Текст</h2>
             <button type="button" class="popup__cross"></button>
         </div>
     </section>
