fix: исправление ошибок

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <template id="card">
                 <div class="elements__element">
-                    <img src="" alt="Изображение" class="elements__image">
+                    <img src="./images/logo.svg" alt="Изображение" class="elements__image">
                     <button type="button" class="elements__trash"></button>
                     <div class="elements__rectangle">
                         <h2 class="elements__text">Текст</h2>
@@ -117,7 +117,7 @@
 
     <section class="popup popup_action_depict">
         <div class="popup__filling">
-            <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Изображение" class="popup__illustration">
+            <img src="./images/logo.svg" alt="Изображение" class="popup__illustration">
             <h2 class="popup__hint">Текст</h2>
             <button type="button" class="popup__cross"></button>
         </div>
