fix: исправление недочетов 6

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <template id="card">
                 <div class="elements__element">
-                    <img src="./images/logo.svg" alt="Изображение" class="elements__image">
+                    <img src="./images/logo.svg" alt="Картинка" class="elements__image">
                     <button type="button" class="elements__trash"></button>
                     <div class="elements__rectangle">
                         <h2 class="elements__text">Текст</h2>
@@ -95,9 +95,9 @@
         <div class="popup__container">
             <h2 class="popup__text">Редактировать профиль</h2>
             <form class="popup__form" name="popup">
-                <input type="text" class="popup__input popup__input_enter_name" name="popup__input-name" value="" maxlength="14" />
-                <input type="text" class="popup__input popup__input_enter_status" name="popup__input-status" value="" maxlength="40" />
-                <button type="submit" class="popup__button" name="popup__input-button">Сохранить</button>
+                <input type="text" placeholder="Имя" class="popup__input popup__input_enter_name" name="popup__input-name" value="" maxlength="14" />
+                <input type="text" placeholder="Статус" class="popup__input popup__input_enter_status" name="popup__input-status" value="" maxlength="40" />
+                <button type="submit" class="popup__button" name="popup__input-reduct-button">Сохранить</button>
             </form>
             <button type="button" class="popup__cross"></button>
         </div>
@@ -107,9 +107,9 @@
         <div class="popup__container">
             <h2 class="popup__text">Новое место</h2>
             <form class="popup__form" name="popup">
-                <input type="text" placeholder="Название" class="popup__input popup__input_enter_title" name="popup__input-name" value=""/>
-                <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup__input-status" value=""/>
-                <button type="submit" class="popup__button" name="popup__input-button">Создать</button>
+                <input type="text" placeholder="Название" class="popup__input popup__input_enter_title" name="popup__input-reduct-title" value=""/>
+                <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup__input-reduct-link" value=""/>
+                <button type="submit" class="popup__button" name="popup__input-place-button">Создать</button>
             </form>
             <button type="button" class="popup__cross"></button>
         </div>
@@ -123,6 +123,7 @@
         </div>
     </section>
 
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/cards.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
