fix: исправление недочетов 8

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     <section class="popup popup_action_edit">
         <div class="popup__container">
             <h2 class="popup__text">Редактировать профиль</h2>
-            <form class="popup__form" name="popup">
-                <input type="text" placeholder="Имя" class="popup__input popup__input_enter_name" name="popup__input-name" value="" maxlength="14" />
-                <input type="text" placeholder="Статус" class="popup__input popup__input_enter_status" name="popup__input-status" value="" maxlength="40" />
-                <button type="submit" class="popup__button" name="popup__input-reduct-button">Сохранить</button>
+            <form class="popup__form" name="popup-edit">
+                <input type="text" placeholder="Имя" class="popup__input popup__input_enter_name" name="popup-edit__input-name" value="" maxlength="14" />
+                <input type="text" placeholder="Статус" class="popup__input popup__input_enter_status" name="popup-edit__input-status" value="" maxlength="40" />
+                <button type="submit" class="popup__button" name="popup-edit__input-button">Сохранить</button>
             </form>
             <button type="button" class="popup__cross"></button>
         </div>
@@ -106,10 +106,10 @@
     <section class="popup popup_action_add">
         <div class="popup__container">
             <h2 class="popup__text">Новое место</h2>
-            <form class="popup__form" name="popup">
-                <input type="text" placeholder="Название" class="popup__input popup__input_enter_title" name="popup__input-reduct-title" value=""/>
-                <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup__input-reduct-link" value=""/>
-                <button type="submit" class="popup__button" name="popup__input-place-button">Создать</button>
+            <form class="popup__form" name="popup-add">
+                <input type="text" placeholder="Название" class="popup__input popup__input_enter_title" name="popup-add__input-title" value=""/>
+                <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup-add__input-link" value=""/>
+                <button type="submit" class="popup__button" name="popup-add__input-button">Создать</button>
             </form>
             <button type="button" class="popup__cross"></button>
         </div>
