--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     <section class="popup popup_action_edit">
         <div class="popup__container">
             <h2 class="popup__text">Редактировать профиль</h2>
-            <form class="popup__form" name="popup-edit">
-                <input type="text" pattern=".*\S+.*" id="popup__name" placeholder="Имя" class="popup__input popup__input_enter_name" name="popup-edit__input-name" value="" minlength="2" maxlength="40" required novalidate/>
+            <form class="popup__form" name="popup-edit" novalidate>
+                <input type="text" pattern=".*\S+.*" id="popup__name" placeholder="Имя" class="popup__input popup__input_enter_name" name="popup-edit__input-name" value="" minlength="2" maxlength="40" required/>
                 <span class="popup__error popup__name-error"></span>
-                <input type="text" pattern=".*\S+.*" id="popup__status" placeholder="Статус" class="popup__input popup__input_enter_status" name="popup-edit__input-status" value="" minlength="2" maxlength="200" required novalidate/>
+                <input type="text" pattern=".*\S+.*" id="popup__status" placeholder="Статус" class="popup__input popup__input_enter_status" name="popup-edit__input-status" value="" minlength="2" maxlength="200" required/>
                 <span class="popup__error popup__status-error"></span>
                 <button type="submit" class="popup__button" name="popup-edit__input-button">Сохранить</button>
             </form>
@@ -106,12 +106,12 @@
     </section>
 
     <section class="popup popup_action_add">
-        <div class="popup__container">
+        <div class="popup__container" novalidate>
             <h2 class="popup__text">Новое место</h2>
             <form class="popup__form" name="popup-add">
-                <input type="text" pattern=".*\S+.*" id="popup__title" placeholder="Название" class="popup__input popup__input_enter_title" name="popup-add__input-title" value="" minlength="2" maxlength="30" required novalidate/>
+                <input type="text" pattern=".*\S+.*" id="popup__title" placeholder="Название" class="popup__input popup__input_enter_title" name="popup-add__input-title" value="" minlength="2" maxlength="30" required/>
                 <span class="popup__error popup__title-error"></span>
-                <input type="url" pattern=".*\S+.*" id="popup__link" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup-add__input-link" value="" required novalidate/>
+                <input type="url" pattern=".*\S+.*" id="popup__link" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup-add__input-link" value="" required/>
                 <span class="popup__error popup__link-error"></span>
                 <button type="submit" class="popup__button" name="popup-add__input-button">Создать</button>
             </form>
@@ -120,7 +120,7 @@
     </section>
 
     <section class="popup popup_action_depict">
-        <div class="popup__filling">
+        <div class="popup__filling" >
             <img src="./images/logo.svg" alt="Изображение" class="popup__illustration">
             <h2 class="popup__hint">Текст</h2>
             <button type="button" class="popup__cross"></button>
