--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         </div>
     </section>
 
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/card.js"></script>
+    <script type="module" src="./scripts/formValidator.js"></script>
 </body>
 </html>
