--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <!-- <link type="text/css" rel="stylesheet" href="./pages/index.css"> -->
 </head>
 
 <body class="root">
     <header class="header">
-        <img src="./images/logo.svg" class="header__logo" alt="Логотип">
+        <img src="<%=require('./images/logo.svg')%>" class="header__logo" alt="Логотип">
     </header>
- 
+
     <main>
         <section class="profile">
             <div class="profile__block">
-                <img src="./images/profile-image.png" class="profile__avatar" alt="Фотография">
+                <img src="<%=require('./images/profile-image.png')%>" class="profile__avatar" alt="Фотография">
                 <div class="profile__info">
                     <div class="profile__edit-name">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -32,7 +32,7 @@
 
             <template id="card">
                 <div class="elements__element">
-                    <img src="./images/logo.svg" alt="Картинка" class="elements__image">
+                    <img src="<%=require('./images/logo.svg')%>" alt="Картинка" class="elements__image">
                     <button type="button" class="elements__trash"></button>
                     <div class="elements__rectangle">
                         <h2 class="elements__text">Текст</h2>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </template>
-            
+
             <!-- 
             <div class="elements__element">
                 <img src="./images/element-image1.png" alt="Изображение" class="elements__image">
@@ -95,9 +95,13 @@
         <div class="popup__container">
             <h2 class="popup__text">Редактировать профиль</h2>
             <form class="popup__form" name="popup-edit" novalidate>
-                <input type="text" pattern=".*\S+.*" id="popup__name" placeholder="Имя" class="popup__input popup__input_enter_name" name="popup-edit__input-name" value="" minlength="2" maxlength="40" required/>
+                <input type="text" pattern=".*\S+.*" id="popup__name" placeholder="Имя"
+                    class="popup__input popup__input_enter_name" name="popup-edit__input-name" value="" minlength="2"
+                    maxlength="40" required />
                 <span class="popup__error popup__name-error"></span>
-                <input type="text" pattern=".*\S+.*" id="popup__status" placeholder="Статус" class="popup__input popup__input_enter_status" name="popup-edit__input-status" value="" minlength="2" maxlength="200" required/>
+                <input type="text" pattern=".*\S+.*" id="popup__status" placeholder="Статус"
+                    class="popup__input popup__input_enter_status" name="popup-edit__input-status" value=""
+                    minlength="2" maxlength="200" required />
                 <span class="popup__error popup__status-error"></span>
                 <button type="submit" class="popup__button" name="popup-edit__input-button">Сохранить</button>
             </form>
@@ -109,9 +113,12 @@
         <div class="popup__container">
             <h2 class="popup__text">Новое место</h2>
             <form class="popup__form" name="popup-add" novalidate>
-                <input type="text" pattern=".*\S+.*" id="popup__title" placeholder="Название" class="popup__input popup__input_enter_title" name="popup-add__input-title" value="" minlength="2" maxlength="30" required/>
+                <input type="text" pattern=".*\S+.*" id="popup__title" placeholder="Название"
+                    class="popup__input popup__input_enter_title" name="popup-add__input-title" value="" minlength="2"
+                    maxlength="30" required />
                 <span class="popup__error popup__title-error"></span>
-                <input type="url" pattern=".*\S+.*" id="popup__link" placeholder="Ссылка на картинку" class="popup__input popup__input_enter_link" name="popup-add__input-link" value="" required/>
+                <input type="url" pattern=".*\S+.*" id="popup__link" placeholder="Ссылка на картинку"
+                    class="popup__input popup__input_enter_link" name="popup-add__input-link" value="" required />
                 <span class="popup__error popup__link-error"></span>
                 <button type="submit" class="popup__button" name="popup-add__input-button">Создать</button>
             </form>
@@ -120,15 +127,20 @@
     </section>
 
     <section class="popup popup_action_depict">
-        <div class="popup__filling" >
-            <img src="./images/logo.svg" alt="Изображение" class="popup__illustration">
+        <div class="popup__filling">
+            <img src="<%=require('./images/logo.svg')%>" alt="Изображение" class="popup__illustration">
             <h2 class="popup__hint">Текст</h2>
             <button type="button" class="popup__cross"></button>
         </div>
     </section>
-
-    <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/card.js"></script>
-    <script type="module" src="./scripts/formValidator.js"></script>
+    <!-- <script type="module" src="./scripts/Constant.js"></script>
+    <script type="module" src="./pages/index.js"></script>
+    <script type="module" src="./components/Card.js"></script>
+    <script type="module" src="./components/FormValidator.js"></script>
+    <script type="module" src="./components/Popup.js"></script>
+    <script type="module" src="./components/PopupWithForm.js"></script>
+    <script type="module" src="./components/PopupWithImage.js"></script>
+    <script type="module" src="./components/Section.js"></script>
+    <script type="module" src="./components/UserInfo.js"></script> -->
 </body>
 </html>
